--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@ function mostrarFormulario(tipo) {
     let precioBaseUSD = 0;
     let precioCompraGlobal = 0;
     let tasaOriginalCompra = 1;
+    let monedaCompra = 'ARS'; // ✅ Se declara acá
 
     let imeiTimeout;
 
@@ -324,7 +325,7 @@ function mostrarFormulario(tipo) {
             Object.entries(snapshot.val()).forEach(([key, prod]) => {
               const item = document.createElement('div');
               item.className = 'cursor-pointer p-1 hover:bg-gray-200';
-              item.textContent = `${prod.modelo} - ${prod.color} - IMEI: ${prod.imei}`;
+              item.textContent = ${prod.modelo} - ${prod.color} - IMEI: ${prod.imei};
               item.addEventListener('click', () => {
                 productoKey = key;
                 modeloSpan.textContent = prod.modelo;
@@ -334,6 +335,7 @@ function mostrarFormulario(tipo) {
                 precioBaseUSD = parseFloat(prod.precioVentaUSD) || 0;
                 precioCompraGlobal = parseFloat(prod.precioCompra) || 0;
                 tasaOriginalCompra = parseFloat(prod.tasaCambio) || 1;
+                monedaCompra = prod.monedaCompra || 'ARS'; // ✅ Se obtiene de la DB
 
                 precioSpanARS.textContent = precioBaseARS.toFixed(2);
                 precioSpanUSD.textContent = precioBaseUSD.toFixed(2);
@@ -346,6 +348,7 @@ function mostrarFormulario(tipo) {
                 listaProductos.innerHTML = '';
                 imeiInput.value = prod.imei;
               });
+
               listaProductos.appendChild(item);
             });
           });
@@ -365,20 +368,20 @@ function mostrarFormulario(tipo) {
       const totalPagadoUSD = montoDolares + (montoPesos / tasaActual);
 
       if (montoPesos === 0 && montoDolares === 0) {
-        finalSpan.textContent = `$${sugeridoPesos.toFixed(2)} (sugerido)`;
-        finalSpanUSD.textContent = `~ USD ${sugeridoUSD.toFixed(2)}`;
+        finalSpan.textContent = $${sugeridoPesos.toFixed(2)} (sugerido);
+        finalSpanUSD.textContent = ~ USD ${sugeridoUSD.toFixed(2)};
         restanteSpan.textContent = '';
       } else {
-        finalSpan.textContent = `$${(montoPesos + montoDolares * tasaActual).toFixed(2)} (pagado)`;
-        finalSpanUSD.textContent = `~ USD ${totalPagadoUSD.toFixed(2)}`;
+        finalSpan.textContent = $${(montoPesos + montoDolares * tasaActual).toFixed(2)} (pagado);
+        finalSpanUSD.textContent = ~ USD ${totalPagadoUSD.toFixed(2)};
 
         const faltanteUSD = precioBaseUSD - totalPagadoUSD;
         if (faltanteUSD > 0) {
           const faltaEnPesos = faltanteUSD * tasaActual;
-          restanteSpan.textContent = `Faltan: USD ${faltanteUSD.toFixed(2)} o $${faltaEnPesos.toFixed(2)} para completar.`;
+          restanteSpan.textContent = Faltan: USD ${faltanteUSD.toFixed(2)} o $${faltaEnPesos.toFixed(2)} para completar.;
           restanteSpan.className = 'text-red-600 font-semibold';
         } else {
-          restanteSpan.textContent = `Pago completo.`;
+          restanteSpan.textContent = Pago completo.;
           restanteSpan.className = 'text-green-600 font-semibold';
         }
       }
@@ -415,13 +418,20 @@ function mostrarFormulario(tipo) {
         montoDolares,
         observaciones: document.getElementById('observaciones').value.trim(),
         creadoEn: new Date().toISOString(),
-      
-        // Nuevos campos relevantes
+
+        // ✅ Corrección completa
         precioCompra: precioCompraGlobal,
-        precioCompraUSDreal: (precioCompraGlobal / tasaOriginalCompra).toFixed(2),
+        precioCompraUSDreal: (() => {
+          if (monedaCompra === 'USD') return precioCompraGlobal.toFixed(2);
+          if (tasaOriginalCompra && tasaOriginalCompra > 0) {
+            return (precioCompraGlobal / tasaOriginalCompra).toFixed(2);
+          }
+          return '';
+        })(),
         tasaCambioVenta: tasaCambio,
         tasaCambioCompra: tasaOriginalCompra,
-      
+        monedaCompra: monedaCompra || 'ARS',
+
         ganancia: ganancia.toFixed(2)
       };
 
@@ -631,25 +641,27 @@ function cargarConsulta() {
 
   db.ref(tipo).limitToLast(100).once("value", snapshot => {
     if (!snapshot.exists()) {
-      tablaContenedor.innerHTML = `<p class="text-gray-600">No hay datos para mostrar.</p>`;
+      tablaContenedor.innerHTML = <p class="text-gray-600">No hay datos para mostrar.</p>;
       return;
     }
 
     const datos = snapshot.val();
     const entradas = Object.entries(datos);
     if (entradas.length === 0) {
-      tablaContenedor.innerHTML = `<p class="text-gray-600">No hay entradas.</p>`;
+      tablaContenedor.innerHTML = <p class="text-gray-600">No hay entradas.</p>;
       return;
     }
 
-    const claves = Object.keys(entradas[0][1]);
+    // Obtenemos las claves originales
+    let claves = Object.keys(entradas[0][1]);
 
-    // Agregamos una columna adicional calculada
-    const indexCompra = claves.indexOf("precioCompra");
-    if (indexCompra !== -1) {
-      claves.splice(indexCompra + 1, 0, "precioCompraUSDreal");
-    }
+    // Aseguramos que estas columnas siempre aparezcan (aunque no estén en el primer registro)
+    const columnasExtra = ["precioCompraUSDreal", "tasaCambioCompra", "tasaCambioVenta"];
+    columnasExtra.forEach(col => {
+      if (!claves.includes(col)) claves.push(col);
+    });
 
+    // Filtramos los datos según el input de búsqueda
     const filtradas = entradas.filter(([_, item]) =>
       claves.some(clave =>
         String(item[clave] ?? '').toLowerCase().includes(filtro)
@@ -657,14 +669,15 @@ function cargarConsulta() {
     );
 
     if (filtradas.length === 0) {
-      tablaContenedor.innerHTML = `<p class="text-gray-600">No se encontraron resultados para "${filtro}".</p>`;
+      tablaContenedor.innerHTML = <p class="text-gray-600">No se encontraron resultados para "${filtro}".</p>;
       return;
     }
 
+    // Generamos la tabla HTML
     let html = `<table class="min-w-full bg-white border border-gray-300">
       <thead>
         <tr>
-          ${claves.map(c => `<th class="px-4 py-2 border">${c}</th>`).join("")}
+          ${claves.map(c => <th class="px-4 py-2 border">${c}</th>).join("")}
           <th class="px-4 py-2 border">Acciones</th>
         </tr>
       </thead>
@@ -672,18 +685,12 @@ function cargarConsulta() {
         ${filtradas.map(([key, item]) => `
           <tr>
             ${claves.map(clave => {
-              if (clave === "precioCompraUSDreal") {
-                const tasa = parseFloat(item["tasaCambio"]);
-                const compra = parseFloat(item["precioCompra"]);
-                const usd = (!isNaN(tasa) && tasa > 0) ? (compra / tasa).toFixed(2) : '';
-                return `<td class="px-4 py-2 border text-sm">${usd}</td>`;
-              } else {
-                return `<td class="px-4 py-2 border text-sm">${item[clave] ?? ''}</td>`;
-              }
+              // Mostramos el valor tal cual para las columnas extras también
+              return <td class="px-4 py-2 border text-sm">${item[clave] ?? ''}</td>;
             }).join("")}
             <td class="px-4 py-2 border text-center">
-              <button onclick="editarItem('${tipo}', '${key}')" class="text-blue-600 hover:underline">✏️</button>
-              <button onclick="eliminarItem('${tipo}', '${key}')" class="text-red-600 hover:underline ml-2">🗑️</button>
+              <button onclick="editarItem('${tipo}', '${key}')" class="text-blue-600 hover:underline">✏</button>
+              <button onclick="eliminarItem('${tipo}', '${key}')" class="text-red-600 hover:underline ml-2">🗑</button>
             </td>
           </tr>
         `).join("")}
@@ -693,7 +700,6 @@ function cargarConsulta() {
     tablaContenedor.innerHTML = html;
   });
 }
-
 
     // NUEVA FUNCIÓN PARA GANANCIAS MENSUALES
 function verGananciasMensuales() {
@@ -735,7 +741,7 @@ function verGananciasMensuales() {
             return;
           }
           if (!(imeiVenta in mapaCompras)) {
-            console.warn(`No se encontró precio de compra para IMEI: ${imeiVenta}`);
+            console.warn(No se encontró precio de compra para IMEI: ${imeiVenta});
             // Opcional: podrías descontar el precioVenta como pérdida, o ignorar esta venta
             return;
           }
@@ -756,7 +762,7 @@ function verGananciasMensuales() {
 
         const gananciaNeta = gananciaBruta - gastosMes;
         document.getElementById('resultado-ganancia-mensual').textContent = 
-          `Ganancia neta en ${mesAnio}: $${gananciaNeta.toFixed(2)} (Ganancia bruta: $${gananciaBruta.toFixed(2)} - Gastos: $${gastosMes.toFixed(2)})`;
+          Ganancia neta en ${mesAnio}: $${gananciaNeta.toFixed(2)} (Ganancia bruta: $${gananciaBruta.toFixed(2)} - Gastos: $${gastosMes.toFixed(2)});
       });
     });
   });
@@ -764,7 +770,7 @@ function verGananciasMensuales() {
 
 function eliminarItem(tipo, id) {
   if (confirm("¿Estás seguro que deseas eliminar este registro?")) {
-    db.ref(`${tipo}/${id}`).remove().then(() => {
+    db.ref(${tipo}/${id}).remove().then(() => {
       alert("Elemento eliminado");
       cargarConsulta();
     });
@@ -772,7 +778,7 @@ function eliminarItem(tipo, id) {
 }
 
 function editarItem(tipo, id) {
-  db.ref(`${tipo}/${id}`).once("value", snapshot => {
+  db.ref(${tipo}/${id}).once("value", snapshot => {
     if (!snapshot.exists()) return alert("Elemento no encontrado");
 
     const datos = snapshot.val();
@@ -802,7 +808,7 @@ function editarItem(tipo, id) {
       if (actualizado.precioCompra) actualizado.precioCompra = parseDecimal(actualizado.precioCompra);
       if (actualizado.precioVenta) actualizado.precioVenta = parseDecimal(actualizado.precioVenta);
 
-      db.ref(`${tipo}/${id}`).set(actualizado).then(() => {
+      db.ref(${tipo}/${id}).set(actualizado).then(() => {
         alert("✅ Datos actualizados");
         mostrarFormulario("consulta");
       });
@@ -853,7 +859,7 @@ function calcularBalanceSeparado(capitalPesos, capitalDolares, tasaCambio) {
           if (imeiVenta && mapaCompra[imeiVenta]) {
             totalCostoCompra += mapaCompra[imeiVenta];
           } else {
-            console.warn(`No se encontró precioCompra para IMEI: ${imeiVenta}`);
+            console.warn(No se encontró precioCompra para IMEI: ${imeiVenta});
           }
         });
       }
@@ -918,7 +924,7 @@ function verGananciasPorRango() {
           total += data[fecha];
         }
       }
-      resultado.innerText = `Ganancia total del ${desde} al ${hasta}: $${total.toLocaleString()}`;
+      resultado.innerText = Ganancia total del ${desde} al ${hasta}: $${total.toLocaleString()};
     })
     .catch(error => {
       resultado.innerText = "Error al obtener datos.";
